Oimo library added. Main.js removed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="js/main.js"></script>
+        <script src="js/oimo3dmain.js"></script>
         <link rel="stylesheet" href="css/main.css">
         <meta charset="UTF-8">
     </head>
