--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <script src="js/oimo.min.js"></script>
+        <script src="js/three.min.js"></script>
         <script src="js/oimo3dmain.js"></script>
         <link rel="stylesheet" href="css/main.css">
         <meta charset="UTF-8">
