--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="js/oimo.min.js"></script>
+        <!--<script src="js/oimo.min.js"></script>-->
         <script src="js/three.min.js"></script>
         <script src="js/oimo3dmain.js"></script>
         <link rel="stylesheet" href="css/main.css">
