--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <!--<script src="js/oimo.min.js"></script>-->
         <script src="js/three.min.js"></script>
+        <script src="js/oimo.js"></script>
         <script src="js/oimo3dmain.js"></script>
         <link rel="stylesheet" href="css/main.css">
         <meta charset="UTF-8">
