Oimo Physics first commit

--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
     <head>
         <!--<script src="js/oimo.min.js"></script>-->
         <script src="js/three.min.js"></script>
-        <script src="js/oimo.js"></script>
+        <script src="js/OimoPhysics.js"></script>
+        <script src="js/OrbitControls.js"></script>
         <script src="js/oimo3dmain.js"></script>
         <link rel="stylesheet" href="css/main.css">
         <meta charset="UTF-8">
     </head>
     <body>
         <div class="mainContainer">
+            <canvas id="mainCanvas"></canvas>
+            <div id='info' style="position: absolute;top:0;left:0"></div>
+
 
         </div>
     </body>
